@@ -727,6 +727,12 @@ typedef struct {
 	int type;
 } StackSlot;
 
+#if HAVE_ARRAY_ELEM_INIT
+extern const guint8 mono_burg_arity [];
+#else
+extern guint8 mono_burg_arity [];
+#endif
+
 enum {
 	MONO_COMP_DOM = 1,
 	MONO_COMP_IDOM = 2,
