@@ -11,8 +11,6 @@
 
 #include "mini.h"
 
-extern guint8 mono_burg_arity [];
-
 #define USE_ORIGINAL_VARS
 #define CREATE_PRUNED_SSA
 
