@@ -1,4 +1,10 @@
 
+Sat Feb 25 16:04:33 CET 2006 Paolo Molaro <lupus@ximian.com>
+
+	* mini.h, mini.c, abcremoval.c, aliasing.c, liveness.c,
+	ssapre.c, graph.c, ssa.c: put the mono_burg_arity[]
+	declaration in the header file.
+
 Sat Feb 25 14:19:31 CET 2006 Paolo Molaro <lupus@ximian.com>
 
 	* helpers.c: reduce relocations and mem usage.
